// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentContainer Component fetches comments on mount 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="comments undefined"
  >
    <div
      className="comment-textarea-wrap mb-3 d-flex "
      style={
        Object {
          "marginTop": 0,
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "15px",
          }
        }
      />
      <div
        className="d-flex flex-wrap align-items-center w-100 "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "cursor": "text",
              "height": "40px",
              "position": "absolute",
              "width": "235px",
            }
          }
        />
        <div
          className="d-flex w-100"
          style={
            Object {
              "border": "1px solid #E9EAEB",
              "overflow": "hidden",
            }
          }
        >
          <textarea
            className="comment-textarea border-0 pl-3"
            data-cy="comment-input"
            name="list-description"
            onChange={[Function]}
            placeholder="Din kommentar ..."
            value=""
          />
          <i
            aria-label="send"
            className="material-icons material-icons-send comment-submit-icon align-self-end "
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xE163;",
              }
            }
            data-unicoded="true"
            id="comment-submit"
            onClick={[Function]}
            role="button"
            tabindex={0}
          />
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`CommentContainer Component renders a list of comments 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="comments undefined"
  >
    <div
      className="comment-textarea-wrap mb-3 d-flex "
      style={
        Object {
          "marginTop": 0,
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "15px",
          }
        }
      />
      <div
        className="d-flex flex-wrap align-items-center w-100 "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "cursor": "text",
              "height": "40px",
              "position": "absolute",
              "width": "235px",
            }
          }
        />
        <div
          className="d-flex w-100"
          style={
            Object {
              "border": "1px solid #E9EAEB",
              "overflow": "hidden",
            }
          }
        >
          <textarea
            className="comment-textarea border-0 pl-3"
            data-cy="comment-input"
            name="list-description"
            onChange={[Function]}
            placeholder="Din kommentar ..."
            value=""
          />
          <i
            aria-label="send"
            className="material-icons material-icons-send comment-submit-icon align-self-end "
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xE163;",
              }
            }
            data-unicoded="true"
            id="comment-submit"
            onClick={[Function]}
            role="button"
            tabindex={0}
          />
        </div>
      </div>
    </div>
    <div
      className="mb2"
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "hidden",
            "transition": "height 300ms ease-in-out",
          }
        }
      >
        <div>
          <comment
            comment={
              Object {
                "_id": "0",
                "comment": "comment0",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              }
            }
            onChange={[Function]}
          />
        </div>
      </div>
    </div>
    <button
      className="btn btn-link link-subtle pb-0"
      id="comment-toggle"
      onClick={[Function]}
      style={
        Object {
          "marginLeft": 55,
          "paddingLeft": 0,
          "position": "relative",
          "textDecoration": "none",
        }
      }
    >
      <p
        className="mb-0 Text Text__body Text__body--weight-semibold"
      >
        Vis tidligere kommentarer
      </p>
    </button>
  </div>
</div>
`;

exports[`CommentContainer Component renders all comments 1`] = `
<CommentContainer
  comments={
    Array [
      Object {
        "_id": "0",
        "comment": "comment0",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "1",
        "comment": "comment1",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "2",
        "comment": "comment2",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "3",
        "comment": "comment3",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "4",
        "comment": "comment4",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
    ]
  }
  fetchComments={
    [MockFunction] {
      "calls": Array [
        Array [
          "some_id",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="comments undefined"
    >
      <CommentInput
        error={null}
        onCancel={[Function]}
        onChange={[Function]}
        onSubmit={[Function]}
        user={
          Object {
            "image": "image_id",
          }
        }
        value=""
      >
        <div
          className="comment-textarea-wrap mb-3 d-flex "
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
              }
            }
          />
          <div
            className="d-flex flex-wrap align-items-center w-100 "
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "cursor": "text",
                  "height": "40px",
                  "position": "absolute",
                  "width": "235px",
                }
              }
            />
            <div
              className="d-flex w-100"
              style={
                Object {
                  "border": "1px solid #E9EAEB",
                  "overflow": "hidden",
                }
              }
            >
              <textarea
                className="comment-textarea border-0 pl-3"
                data-cy="comment-input"
                name="list-description"
                onChange={[Function]}
                placeholder="Din kommentar ..."
                value=""
              />
              <Icon
                aria-label="send"
                className="comment-submit-icon align-self-end"
                id="comment-submit"
                name="send"
                onClick={[Function]}
                role="button"
                tabindex={0}
              >
                <i
                  aria-label="send"
                  className="material-icons material-icons-send comment-submit-icon align-self-end "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE163;",
                    }
                  }
                  data-unicoded="true"
                  id="comment-submit"
                  onClick={[Function]}
                  role="button"
                  tabindex={0}
                />
              </Icon>
            </div>
          </div>
        </div>
      </CommentInput>
      <div
        className="mb2"
      >
        <CommentList
          comments={
            Array [
              Object {
                "_id": "0",
                "comment": "comment0",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "1",
                "comment": "comment1",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "2",
                "comment": "comment2",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "3",
                "comment": "comment3",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "4",
                "comment": "comment4",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
            ]
          }
          showCount={5}
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "hidden",
                "transition": "height 300ms ease-in-out",
              }
            }
          >
            <div>
              <comment
                comment={
                  Object {
                    "_id": "0",
                    "comment": "comment0",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="0"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "1",
                    "comment": "comment1",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="1"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "2",
                    "comment": "comment2",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="2"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "3",
                    "comment": "comment3",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="3"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "4",
                    "comment": "comment4",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="4"
                onChange={[Function]}
              />
            </div>
          </div>
        </CommentList>
      </div>
      <button
        className="btn btn-link link-subtle pb-0"
        id="comment-toggle"
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 55,
            "paddingLeft": 0,
            "position": "relative",
            "textDecoration": "none",
          }
        }
      >
        <Text
          className="mb-0"
          type="body"
          variant="weight-semibold"
        >
          <p
            className="mb-0 Text Text__body Text__body--weight-semibold"
          >
            <T
              component="post"
              name="showLessComments"
            >
              Skjul tidligere kommentarer
            </T>
          </p>
        </Text>
      </button>
    </div>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Component renders comment with links and emojis 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="comments undefined"
  >
    <div
      className="comment-textarea-wrap mb-3 d-flex "
      style={
        Object {
          "marginTop": 0,
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "15px",
          }
        }
      />
      <div
        className="d-flex flex-wrap align-items-center w-100 "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "cursor": "text",
              "height": "40px",
              "position": "absolute",
              "width": "235px",
            }
          }
        />
        <div
          className="d-flex w-100"
          style={
            Object {
              "border": "1px solid #E9EAEB",
              "overflow": "hidden",
            }
          }
        >
          <textarea
            className="comment-textarea border-0 pl-3"
            data-cy="comment-input"
            name="list-description"
            onChange={[Function]}
            placeholder="Din kommentar ..."
            value=""
          />
          <i
            aria-label="send"
            className="material-icons material-icons-send comment-submit-icon align-self-end "
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xE163;",
              }
            }
            data-unicoded="true"
            id="comment-submit"
            onClick={[Function]}
            role="button"
            tabindex={0}
          />
        </div>
      </div>
    </div>
    <div
      className="mb2"
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "hidden",
            "transition": "height 300ms ease-in-out",
          }
        }
      >
        <div>
          <comment
            comment={
              Object {
                "_id": "comment",
                "comment": "This is a comment with ❤️ and links.com 
 and line breaks",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              }
            }
            onChange={[Function]}
          />
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`CommentContainer Component renders error 1`] = `
<CommentContainer
  comments={
    Array [
      Object {
        "_id": "0",
        "comment": "comment0",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "1",
        "comment": "comment1",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
    ]
  }
  error={
    Object {
      "comment": "comment3",
      "error": "some error occures",
    }
  }
  fetchComments={
    [MockFunction] {
      "calls": Array [
        Array [
          "some_id",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="comments undefined"
    >
      <CommentInput
        error={
          Object {
            "comment": "comment3",
            "error": "some error occures",
          }
        }
        onCancel={[Function]}
        onChange={[Function]}
        onSubmit={[Function]}
        user={
          Object {
            "image": "image_id",
          }
        }
        value="comment3"
      >
        <div
          className="comment-textarea-wrap mb-3 d-flex "
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
              }
            }
          />
          <div
            className="d-flex flex-wrap align-items-center w-100 has-error"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "cursor": "text",
                  "height": "40px",
                  "position": "absolute",
                  "width": "235px",
                }
              }
            />
            <div
              className="d-flex w-100"
              style={
                Object {
                  "border": "1px solid #E9EAEB",
                  "overflow": "hidden",
                }
              }
            >
              <textarea
                className="comment-textarea border-0 pl-3"
                data-cy="comment-input"
                name="list-description"
                onChange={[Function]}
                placeholder="Din kommentar ..."
                value="comment3"
              />
              <Icon
                aria-label="send"
                className="comment-submit-icon align-self-end"
                id="comment-submit"
                name="send"
                onClick={[Function]}
                role="button"
                tabindex={0}
              >
                <i
                  aria-label="send"
                  className="material-icons material-icons-send comment-submit-icon align-self-end "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE163;",
                    }
                  }
                  data-unicoded="true"
                  id="comment-submit"
                  onClick={[Function]}
                  role="button"
                  tabindex={0}
                />
              </Icon>
            </div>
            <div
              className="error"
            >
              some error occures
            </div>
          </div>
        </div>
      </CommentInput>
      <div
        className="mb2"
      >
        <CommentList
          comments={
            Array [
              Object {
                "_id": "0",
                "comment": "comment0",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "1",
                "comment": "comment1",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
            ]
          }
          showCount={1}
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "hidden",
                "transition": "height 300ms ease-in-out",
              }
            }
          >
            <div>
              <comment
                comment={
                  Object {
                    "_id": "0",
                    "comment": "comment0",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="0"
                onChange={[Function]}
              />
            </div>
          </div>
        </CommentList>
      </div>
      <button
        className="btn btn-link link-subtle pb-0"
        id="comment-toggle"
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 55,
            "paddingLeft": 0,
            "position": "relative",
            "textDecoration": "none",
          }
        }
      >
        <Text
          className="mb-0"
          type="body"
          variant="weight-semibold"
        >
          <p
            className="mb-0 Text Text__body Text__body--weight-semibold"
          >
            <T
              component="post"
              name="showMoreComments"
            >
              Vis tidligere kommentarer
            </T>
          </p>
        </Text>
      </button>
    </div>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Component renders saving overlay 1`] = `
<CommentContainer
  comments={
    Array [
      Object {
        "_id": "0",
        "comment": "comment0",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "1",
        "comment": "comment1",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "new_comment",
        "comment": "comment new",
        "saving": true,
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
    ]
  }
  fetchComments={
    [MockFunction] {
      "calls": Array [
        Array [
          "some_id",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="comments undefined"
    >
      <CommentInput
        error={null}
        onCancel={[Function]}
        onChange={[Function]}
        onSubmit={[Function]}
        user={
          Object {
            "image": "image_id",
          }
        }
        value=""
      >
        <div
          className="comment-textarea-wrap mb-3 d-flex "
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
              }
            }
          />
          <div
            className="d-flex flex-wrap align-items-center w-100 "
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "cursor": "text",
                  "height": "40px",
                  "position": "absolute",
                  "width": "235px",
                }
              }
            />
            <div
              className="d-flex w-100"
              style={
                Object {
                  "border": "1px solid #E9EAEB",
                  "overflow": "hidden",
                }
              }
            >
              <textarea
                className="comment-textarea border-0 pl-3"
                data-cy="comment-input"
                name="list-description"
                onChange={[Function]}
                placeholder="Din kommentar ..."
                value=""
              />
              <Icon
                aria-label="send"
                className="comment-submit-icon align-self-end"
                id="comment-submit"
                name="send"
                onClick={[Function]}
                role="button"
                tabindex={0}
              >
                <i
                  aria-label="send"
                  className="material-icons material-icons-send comment-submit-icon align-self-end "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE163;",
                    }
                  }
                  data-unicoded="true"
                  id="comment-submit"
                  onClick={[Function]}
                  role="button"
                  tabindex={0}
                />
              </Icon>
            </div>
          </div>
        </div>
      </CommentInput>
      <div
        className="mb2"
      >
        <CommentList
          comments={
            Array [
              Object {
                "_id": "0",
                "comment": "comment0",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "1",
                "comment": "comment1",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "new_comment",
                "comment": "comment new",
                "saving": true,
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
            ]
          }
          showCount={1}
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "hidden",
                "transition": "height 300ms ease-in-out",
              }
            }
          >
            <div>
              <comment
                comment={
                  Object {
                    "_id": "0",
                    "comment": "comment0",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="0"
                onChange={[Function]}
              />
            </div>
          </div>
        </CommentList>
      </div>
      <button
        className="btn btn-link link-subtle pb-0"
        id="comment-toggle"
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 55,
            "paddingLeft": 0,
            "position": "relative",
            "textDecoration": "none",
          }
        }
      >
        <Text
          className="mb-0"
          type="body"
          variant="weight-semibold"
        >
          <p
            className="mb-0 Text Text__body Text__body--weight-semibold"
          >
            <T
              component="post"
              name="showMoreComments"
            >
              Vis tidligere kommentarer
            </T>
          </p>
        </Text>
      </button>
    </div>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Toggle all comments 1`] = `
<CommentContainer
  comments={
    Array [
      Object {
        "_id": "0",
        "comment": "comment0",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "1",
        "comment": "comment1",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "2",
        "comment": "comment2",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "3",
        "comment": "comment3",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "4",
        "comment": "comment4",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
    ]
  }
  fetchComments={
    [MockFunction] {
      "calls": Array [
        Array [
          "some_id",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="comments undefined"
    >
      <CommentInput
        error={null}
        onCancel={[Function]}
        onChange={[Function]}
        onSubmit={[Function]}
        user={
          Object {
            "image": "image_id",
          }
        }
        value=""
      >
        <div
          className="comment-textarea-wrap mb-3 d-flex "
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
              }
            }
          />
          <div
            className="d-flex flex-wrap align-items-center w-100 "
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "cursor": "text",
                  "height": "40px",
                  "position": "absolute",
                  "width": "235px",
                }
              }
            />
            <div
              className="d-flex w-100"
              style={
                Object {
                  "border": "1px solid #E9EAEB",
                  "overflow": "hidden",
                }
              }
            >
              <textarea
                className="comment-textarea border-0 pl-3"
                data-cy="comment-input"
                name="list-description"
                onChange={[Function]}
                placeholder="Din kommentar ..."
                value=""
              />
              <Icon
                aria-label="send"
                className="comment-submit-icon align-self-end"
                id="comment-submit"
                name="send"
                onClick={[Function]}
                role="button"
                tabindex={0}
              >
                <i
                  aria-label="send"
                  className="material-icons material-icons-send comment-submit-icon align-self-end "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE163;",
                    }
                  }
                  data-unicoded="true"
                  id="comment-submit"
                  onClick={[Function]}
                  role="button"
                  tabindex={0}
                />
              </Icon>
            </div>
          </div>
        </div>
      </CommentInput>
      <div
        className="mb2"
      >
        <CommentList
          comments={
            Array [
              Object {
                "_id": "0",
                "comment": "comment0",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "1",
                "comment": "comment1",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "2",
                "comment": "comment2",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "3",
                "comment": "comment3",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "4",
                "comment": "comment4",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
            ]
          }
          showCount={1}
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "hidden",
                "transition": "height 300ms ease-in-out",
              }
            }
          >
            <div>
              <comment
                comment={
                  Object {
                    "_id": "0",
                    "comment": "comment0",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="0"
                onChange={[Function]}
              />
            </div>
          </div>
        </CommentList>
      </div>
      <button
        className="btn btn-link link-subtle pb-0"
        id="comment-toggle"
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 55,
            "paddingLeft": 0,
            "position": "relative",
            "textDecoration": "none",
          }
        }
      >
        <Text
          className="mb-0"
          type="body"
          variant="weight-semibold"
        >
          <p
            className="mb-0 Text Text__body Text__body--weight-semibold"
          >
            <T
              component="post"
              name="showMoreComments"
            >
              Vis tidligere kommentarer
            </T>
          </p>
        </Text>
      </button>
    </div>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Toggle all comments 2`] = `
<CommentContainer
  comments={
    Array [
      Object {
        "_id": "0",
        "comment": "comment0",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "1",
        "comment": "comment1",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "2",
        "comment": "comment2",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "3",
        "comment": "comment3",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
      Object {
        "_id": "4",
        "comment": "comment4",
        "user": Object {
          "name": "Benny Cosmos",
        },
      },
    ]
  }
  fetchComments={
    [MockFunction] {
      "calls": Array [
        Array [
          "some_id",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="comments undefined"
    >
      <CommentInput
        error={null}
        onCancel={[Function]}
        onChange={[Function]}
        onSubmit={[Function]}
        user={
          Object {
            "image": "image_id",
          }
        }
        value=""
      >
        <div
          className="comment-textarea-wrap mb-3 d-flex "
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
              }
            }
          />
          <div
            className="d-flex flex-wrap align-items-center w-100 "
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "cursor": "text",
                  "height": "40px",
                  "position": "absolute",
                  "width": "235px",
                }
              }
            />
            <div
              className="d-flex w-100"
              style={
                Object {
                  "border": "1px solid #E9EAEB",
                  "overflow": "hidden",
                }
              }
            >
              <textarea
                className="comment-textarea border-0 pl-3"
                data-cy="comment-input"
                name="list-description"
                onChange={[Function]}
                placeholder="Din kommentar ..."
                value=""
              />
              <Icon
                aria-label="send"
                className="comment-submit-icon align-self-end"
                id="comment-submit"
                name="send"
                onClick={[Function]}
                role="button"
                tabindex={0}
              >
                <i
                  aria-label="send"
                  className="material-icons material-icons-send comment-submit-icon align-self-end "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#xE163;",
                    }
                  }
                  data-unicoded="true"
                  id="comment-submit"
                  onClick={[Function]}
                  role="button"
                  tabindex={0}
                />
              </Icon>
            </div>
          </div>
        </div>
      </CommentInput>
      <div
        className="mb2"
      >
        <CommentList
          comments={
            Array [
              Object {
                "_id": "0",
                "comment": "comment0",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "1",
                "comment": "comment1",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "2",
                "comment": "comment2",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "3",
                "comment": "comment3",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
              Object {
                "_id": "4",
                "comment": "comment4",
                "user": Object {
                  "name": "Benny Cosmos",
                },
              },
            ]
          }
          showCount={5}
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <div
            style={
              Object {
                "height": 0,
                "overflow": "hidden",
                "transition": "height 300ms ease-in-out",
              }
            }
          >
            <div>
              <comment
                comment={
                  Object {
                    "_id": "0",
                    "comment": "comment0",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="0"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "1",
                    "comment": "comment1",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="1"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "2",
                    "comment": "comment2",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="2"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "3",
                    "comment": "comment3",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="3"
                onChange={[Function]}
              />
              <comment
                comment={
                  Object {
                    "_id": "4",
                    "comment": "comment4",
                    "user": Object {
                      "name": "Benny Cosmos",
                    },
                  }
                }
                key="4"
                onChange={[Function]}
              />
            </div>
          </div>
        </CommentList>
      </div>
      <button
        className="btn btn-link link-subtle pb-0"
        id="comment-toggle"
        onClick={[Function]}
        style={
          Object {
            "marginLeft": 55,
            "paddingLeft": 0,
            "position": "relative",
            "textDecoration": "none",
          }
        }
      >
        <Text
          className="mb-0"
          type="body"
          variant="weight-semibold"
        >
          <p
            className="mb-0 Text Text__body Text__body--weight-semibold"
          >
            <T
              component="post"
              name="showLessComments"
            >
              Skjul tidligere kommentarer
            </T>
          </p>
        </Text>
      </button>
    </div>
  </div>
</CommentContainer>
`;
